added google sign in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="sports_fragment">Sports</string>
     <string name="technology_fragment">Technology</string>
     <string name="favorites_fragment">Favorites</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="you_have_to_sign_in_for_see_your_favorites">LOGIN TO SEE YOUR FAVORITES</string>
+    <string name="sign_in_with_google">Sign in</string>
+    <string name="welcome">Welcome</string>
 </resources>
