--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="you_have_to_sign_in_for_see_your_favorites">LOGIN TO SEE YOUR FAVORITES</string>
     <string name="sign_in_with_google">Sign in</string>
     <string name="welcome">Welcome</string>
+    <string name="cant_sign_in">Login problem. Check the Internet connection</string>
 </resources>
