--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="you_have_to_sign_in_for_see_your_favorites">LOGIN TO SEE YOUR FAVORITES</string>
+    <string name="you_have_to_sign_in_for_see_your_favorites">LOGIN TO SAVE AND SEE YOUR FAVORITES</string>
     <string name="sign_in_with_google">Sign in</string>
     <string name="welcome">Welcome</string>
     <string name="cant_sign_in">Login problem. Check the Internet connection</string>
